# pyArduinoSerial

./: .gitignore  LICENSE  README.md  a.csv  main.py  pyproject.toml  pyserial.py  setup
pyArduinoSerial/: __init__.py  cli.py  data_stream.py  data_transform.py  myserial.py  quit_utitlity.py  serial_utility.py
result/: test_data.csv  test_data_processed.csv
src/: __init__.py  data_stream.py  data_transform.py  quit_utitlity.py  read_from_file.py
src/communication/: serial_utility.py
src/data/: data_types.py
src/file/: write_to_file.py
src/utils/: quit_utitlity.py
src/utils/datatransform/: data_transform.py
