[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "pyArduino_serial"
version = "0.0.1"
authors = [
  { name="Example Author", email="amalbabujr13@gmail.com" },
]
description = "python based serial monitor for microcontrollers"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"